# Kvngo

./: pyproject.toml
src/: kvngo.kv  lingo.kv  main.py  words.py
src/kvngo/: main.py
